# person-sensor

.github/workflows/: pr.yml
examples/: Cargo.toml
person-sensor/: Cargo.toml
person-sensor/src/: lib.rs  person_sensor.rs  person_sensor_builder.rs
person-sensor/tests/: mock.rs
